--- a/main.html
+++ b/main.html
@@ -4,9 +4,53 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
+	<body>
+    <h2>Favourite Song</h2>
+<hr>
 
-<body>
+	<h5>Create a webpage displaying your favourite song and link it to the official YouTube video.</h5>
+
+	<h3>Requirements</h3>
+	<hr>
+	<table>
+       <tr>
+		 <th>Requirement</th>
+		 <th>Description</th>
+	   </tr>
+		<tr>
+			<td>
+				HTML Structure
+			</td>
+			<td>
+				Display Text
+			</td>
+			<td>
+				Link to YouTube
+			</td>
+			<td>
+				Anchor Tag Validation
+			</td>
+		</tr>
+		<tr>
+			<td>
+				All the content must be inside a "div" tag.
+			</td>
+			<td>
+				Display the text "My current favourite song is [song_name]" where [song_name] should be replaced with your actual favourite song name.
+			</td>
+			<td>
+				Link the song name to the official YouTube link of the song through anchor tags.
+			</td>
+			<td>
+				The anchor tag should contain a valid href attribute with a non-empty URL.
+			</td>
+		</tr>
+		
+	</table>
+	
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
