--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <h2>Favourite Song</h2>
 <hr>
     <h5>Create a webpage displaying your current favourite song and link it to the official YouTube video.</h5>
-	<h3>Requirements</h3>
+	<h3>Requirements:</h3>
 	<hr>
 	<table>
        <tr>
